@@ -691,22 +691,24 @@ yank		^[ Y		Undelete text
 yankpop		^[ Y		Undelete text
  toggle_marking	^@		Ctrl-space block selection method
 select,rtarw,markk    ^[ [ 1 ; 5 C    Mark right
-select,rtarw,markk    ^[ 5 C          Mark right
+select,rtarw,markk    ^[ [ 5 C        Mark right
 
 select,ltarw,markk    ^[ [ 1 ; 5 D    Mark left
-select,ltarw,markk    ^[ 5 D   	      Mark left
+select,ltarw,markk    ^[ [ 5 D        Mark left
 
 select,uparw,markk    ^[ [ 1 ; 5 A    Mark up
-select,uparw,markk    ^[ 5 A          Mark up
+select,uparw,markk    ^[ [ 5 A        Mark up
 
 select,dnarw,markk    ^[ [ 1 ; 5 B    Mark down
-select,dnarw,markk    ^[ 5 B          Mark down
+select,dnarw,markk    ^[ [ 5 B        Mark down
 
-blkdel		^[ [ 3 ; 5 -	Gnome-terminal Ctrl-Del
-blkdel		^[ [ 3 ; 5 ~	Xterm Ctrl-Del
+markk,blkdel,nmark   ^[ [ 3 ; 5 -	Gnome-terminal Ctrl-Del
+markk,blkdel,nmark   ^[ [ 3 ; 5 ~	Xterm Ctrl-Del
 yank		^[ [ 2 ; 5 -	Gnome-terminal Ctrl-Ins
 yank		^[ [ 2 ; 5 ~    Xterm Ctrl-Ins
 
+dropon		^@
+ bufed		^[ d		Menu of buffers
 nbuf		^[ v		Next buffer
  pbuf		^[ .		Next buffer
  nbuf		^[ ,		Prev buffer
@@ -801,7 +803,7 @@ groww		^K ^G
 groww		^K g
 insc		.kI		Insert a space
  insc		^@
-insc		^@
+insf		^K R		Insert a file
 insf		^K ^R
 insf		^K r
 lindent		^K ,		Indent to left
